working on a fix for group expand/collapse

--- a/src/app/group.component.css
+++ b/src/app/group.component.css
@@ -1,7 +1,3 @@
-button{
-    margin-top: 8px;
-}
-
 .line {
    
     border: 0;
@@ -78,6 +74,7 @@ note .noteContainer {
 }
 
 .button_image{
+    margin-top: 10px;
     height: 30px;
     width: 30px;
 }
